add content of login section

--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Register/Login to Quiz Web</title>
+    <title>Login / Register</title>
     <link rel="stylesheet" href="./styles/styles.css" />
   </head>
   <body>
+    <header>Quiz App - Login or Register</header>
+
+    <section>
+      <h3>Login</h3>
+      <input placeholder="Email" /><br />
+      <input type="password" placeholder="Password" /><br />
+      <button>Login</button>
+    </section>
+
+    <section></section>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
