add content of register section

--- a/index.html
+++ b/index.html
@@ -11,12 +11,17 @@
 
     <section>
       <h3>Login</h3>
-      <input placeholder="Email" /><br />
-      <input type="password" placeholder="Password" /><br />
+      <input placeholder="Email" />
+      <input type="password" placeholder="Password" />
       <button>Login</button>
     </section>
 
-    <section></section>
+    <section>
+      <h3>Register</h3>
+      <input placeholder="Email" />
+      <input type="password" placeholder="Password" />
+      <button>Login</button>
+    </section>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
