add css class names

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <body>
     <header>Quiz App - Login or Register</header>
 
-    <section>
+    <section class="sec-1">
       <h3>Login</h3>
       <input placeholder="Email" />
       <input type="password" placeholder="Password" />
       <button>Login</button>
     </section>
 
-    <section>
+    <section class="sec-2">
       <h3>Register</h3>
       <input placeholder="Email" />
       <input type="password" placeholder="Password" />
