style the authentication page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login / Register</title>
     <link rel="stylesheet" href="./styles/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <header>Quiz App - Login or Register</header>
+    <header>QuizCrafters</header>
+    <h2>Login or Register</h2>
 
     <section class="sec-1">
       <h3>Login</h3>
@@ -16,11 +21,12 @@
       <button>Login</button>
     </section>
 
+    <p>New Here? Create an Account!</p>
     <section class="sec-2">
       <h3>Register</h3>
       <input placeholder="Email" />
       <input type="password" placeholder="Password" />
-      <button>Login</button>
+      <button>Register</button>
     </section>
     <script src="./scripts/index.js"></script>
   </body>
