add content of section 1 and style it

--- a/pages/home.html
+++ b/pages/home.html
@@ -48,6 +48,14 @@
         />
       </svg>
     </header>
+    <section class="sec-1">
+      <img class="sec-1-img" src="../assets/images/homee.jpg" />
+      <h1 class="sec-1-msg">
+        "Welcome to QuizCrafters – Sharpen your skills in HTML, CSS, and
+        JavaScript one question at a time!"
+      </h1>
+    </section>
+
     <script src="../scripts/home.js"></script>
   </body>
 </html>
