--- a/pages/home.html
+++ b/pages/home.html
@@ -56,6 +56,35 @@
       </h1>
     </section>
 
+    <section class="sec-2">
+      <div class="html">
+        <h1>HTML</h1>
+        <h2>
+          "Test your knowledge of HTML – the foundation of every web page. From
+          tags to structure, see how well you understand the language that
+          builds the web!"
+        </h2>
+        <button>HTML QUIZ</button>
+      </div>
+      <div class="css">
+        <h1>CSS</h1>
+        <h2>
+          "Ready to style things up? Dive into our CSS quiz and challenge your
+          understanding of layout, colors, spacing, and responsive design."
+        </h2>
+        <button>CSS QUIZ</button>
+      </div>
+      <div class="js">
+        <h1>JAVASCRIPT</h1>
+        <h2>
+          "Put your logic to the test with our JavaScript quiz! From variables
+          and functions to DOM manipulation, see how well you can bring
+          interactivity to the web."
+        </h2>
+        <button>JS QUIZ</button>
+      </div>
+    </section>
+
     <script src="../scripts/home.js"></script>
   </body>
 </html>
