--- a/pages/home.html
+++ b/pages/home.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>QuizCrafters</title>
     <link rel="stylesheet" href="../styles/home.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -58,7 +62,7 @@
 
     <section class="sec-2">
       <div class="html">
-        <h1>HTML</h1>
+        <a>HTML</a>
         <h2>
           "Test your knowledge of HTML – the foundation of every web page. From
           tags to structure, see how well you understand the language that
@@ -66,14 +70,14 @@
         </h2>
       </div>
       <div class="css">
-        <h1>CSS</h1>
+        <a>CSS</a>
         <h2>
           "Ready to style things up? Dive into our CSS quiz and challenge your
           understanding of layout, colors, spacing, and responsive design."
         </h2>
       </div>
       <div class="js">
-        <h1>JAVASCRIPT</h1>
+        <a>JAVASCRIPT</a>
         <h2>
           "Put your logic to the test with our JavaScript quiz! From variables
           and functions to DOM manipulation, see how well you can bring
