add ids in index.html and create the dashboard page

--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <header>QuizCrafters</header>
     <h2>Login or Register</h2>
 
-    <section class="sec-1">
+    <form class="sec-1" id="login-form">
       <h3>Login</h3>
-      <input placeholder="Email" />
-      <input type="password" placeholder="Password" />
-      <button>Login</button>
-    </section>
+      <input type="text" placeholder="Email" id="login-email" />
+      <input type="password" placeholder="Password" id="login-password" />
+      <button type="submit">Login</button>
+    </form>
 
     <p>New Here? Create an Account!</p>
-    <section class="sec-2">
+    <form class="sec-2" id="register-form">
       <h3>Register</h3>
-      <input placeholder="Email" />
-      <input type="password" placeholder="Password" />
-      <button>Register</button>
-    </section>
+      <input type="text" placeholder="Email" id="register-email" />
+      <input type="password" placeholder="Password" id="register-password" />
+      <button type="submit">Register</button>
+    </form>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
