--- a/pages/home.html
+++ b/pages/home.html
@@ -55,8 +55,8 @@
     <section class="sec-1">
       <img class="sec-1-img" src="../assets/images/homee.jpg" />
       <h1 class="sec-1-msg">
-        "Welcome to QuizCrafters – Sharpen your skills in HTML, CSS, and
-        JavaScript one question at a time!"
+        Welcome to QuizCrafters – Sharpen your skills in HTML, CSS, and
+        JavaScript one question at a time!
       </h1>
     </section>
 
@@ -64,24 +64,24 @@
       <div class="html">
         <a>HTML</a>
         <h2>
-          "Test your knowledge of HTML – the foundation of every web page. From
+          Test your knowledge of HTML – the foundation of every web page. From
           tags to structure, see how well you understand the language that
-          builds the web!"
+          builds the web!
         </h2>
       </div>
       <div class="css">
         <a>CSS</a>
         <h2>
-          "Ready to style things up? Dive into our CSS quiz and challenge your
-          understanding of layout, colors, spacing, and responsive design."
+          Ready to style things up? Dive into our CSS quiz and challenge your
+          understanding of layout, colors, spacing, and responsive design.
         </h2>
       </div>
       <div class="js">
         <a>JAVASCRIPT</a>
         <h2>
-          "Put your logic to the test with our JavaScript quiz! From variables
+          Put your logic to the test with our JavaScript quiz! From variables
           and functions to DOM manipulation, see how well you can bring
-          interactivity to the web."
+          interactivity to the web.
         </h2>
       </div>
     </section>
