link the <a> attributes in home page to respective quiz pages and adjust text decoration property

--- a/pages/home.html
+++ b/pages/home.html
@@ -62,7 +62,7 @@
 
     <section class="sec-2">
       <div class="html">
-        <a>HTML</a>
+        <a href="./quiz1.html">HTML</a>
         <h2>
           Test your knowledge of HTML – the foundation of every web page. From
           tags to structure, see how well you understand the language that
@@ -70,14 +70,14 @@
         </h2>
       </div>
       <div class="css">
-        <a>CSS</a>
+        <a href="./quiz2.html">CSS</a>
         <h2>
           Ready to style things up? Dive into our CSS quiz and challenge your
           understanding of layout, colors, spacing, and responsive design.
         </h2>
       </div>
       <div class="js">
-        <a>JAVASCRIPT</a>
+        <a href="./quiz3.html">JAVASCRIPT</a>
         <h2>
           Put your logic to the test with our JavaScript quiz! From variables
           and functions to DOM manipulation, see how well you can bring
