copy header content and styling in quiz1

--- a/pages/quiz1.html
+++ b/pages/quiz1.html
@@ -6,5 +6,9 @@
     <title>HTML Quiz</title>
     <link rel="stylesheet" href="../styles/quiz1.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>QuizCrafters</h1>
+    </header>
+  </body>
 </html>
