--- a/pages/quiz3.html
+++ b/pages/quiz3.html
@@ -3,8 +3,93 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JAVASCRIPT Quiz</title>
-    <link rel="stylesheet" href="../styles/quiz3.css" />
+    <title>JS Quiz</title>
+    <link rel="stylesheet" href="../styles/common-quiz.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1>QuizCrafters</h1>
+    </header>
+
+    <section class="sec-1">
+      <img src="../assets/images/javascript.png" />
+      <h1>JAVASCRIPT Quiz</h1>
+    </section>
+
+    <section class="big-sec">
+      <section class="sec-2">
+        <form id="quiz-form">
+          <div class="question">
+            <p>1. What is JavaScript used for in web development?</p>
+            <label
+              ><input type="radio" name="q1" value="a" /> Styling web
+              pages</label
+            ><br />
+            <label
+              ><input type="radio" name="q1" value="b" /> Structuring
+              content</label
+            ><br />
+            <label
+              ><input type="radio" name="q1" value="c" /> Making web pages
+              interactive</label
+            >
+          </div>
+
+          <div class="question">
+            <p>2. Which keyword is used to declare a variable in JavaScript?</p>
+            <label><input type="radio" name="q2" value="a" /> var</label><br />
+            <label><input type="radio" name="q2" value="b" /> define</label
+            ><br />
+            <label><input type="radio" name="q2" value="c" /> create</label>
+          </div>
+
+          <div class="question">
+            <p>3. What will <code>console.log(2 + "2")</code> output?</p>
+            <label><input type="radio" name="q3" value="a" /> 4</label><br />
+            <label><input type="radio" name="q3" value="b" /> "22"</label><br />
+            <label><input type="radio" name="q3" value="c" /> NaN</label>
+          </div>
+
+          <div class="question">
+            <p>4. What does <code>document.getElementById()</code> do?</p>
+            <label
+              ><input type="radio" name="q4" value="a" /> Creates a new
+              element</label
+            ><br />
+            <label
+              ><input type="radio" name="q4" value="b" /> Finds an element by
+              its ID</label
+            ><br />
+            <label
+              ><input type="radio" name="q4" value="c" /> Deletes an
+              element</label
+            >
+          </div>
+
+          <div class="question">
+            <p>5. Which symbol is used for comments in JavaScript?</p>
+            <label><input type="radio" name="q5" value="a" /> #</label><br />
+            <label><input type="radio" name="q5" value="b" /> //</label><br />
+            <label
+              ><input type="radio" name="q5" value="c" /> &lt;!-- --&gt;</label
+            >
+          </div>
+
+          <button type="submit">Submit</button>
+        </form>
+
+        <p id="score-output"></p>
+      </section>
+
+      <section class="sec-3">
+        <img class="img-1" src="../assets/images/nine.png" />
+        <img class="img-2" src="../assets/images/four.png" />
+        <img class="img-3" src="../assets/images/two.png" />
+      </section>
+    </section>
+  </body>
 </html>
