get form and score elements, add correct answers of each test

--- a/pages/quiz1.html
+++ b/pages/quiz1.html
@@ -101,5 +101,7 @@
         <img class="img-3" src="../assets/images/three.png" />
       </section>
     </section>
+
+    <script src="../scripts/common-quiz.js"></script>
   </body>
 </html>
