--- a/pages/quiz2.html
+++ b/pages/quiz2.html
@@ -102,5 +102,7 @@
         <img class="img-3" src="../assets/images/seven.png" />
       </section>
     </section>
+
+    <script src="../scripts/common-quiz.js"></script>
   </body>
 </html>
