--- a/pages/quiz3.html
+++ b/pages/quiz3.html
@@ -41,7 +41,7 @@
 
           <div class="question">
             <p>2. Which keyword is used to declare a variable in JavaScript?</p>
-            <label><input type="radio" name="q2" value="a" /> var</label><br />
+            <label><input type="radio" name="q2" value="a" /> let</label><br />
             <label><input type="radio" name="q2" value="b" /> define</label
             ><br />
             <label><input type="radio" name="q2" value="c" /> create</label>
@@ -91,5 +91,7 @@
         <img class="img-3" src="../assets/images/two.png" />
       </section>
     </section>
+
+    <script src="../scripts/common-quiz.js"></script>
   </body>
 </html>
