style the score

--- a/pages/quiz2.html
+++ b/pages/quiz2.html
@@ -93,7 +93,7 @@
           <button type="submit">Submit</button>
         </form>
 
-        <p id="score-output"></p>
+        <p class="score" id="score-output"></p>
       </section>
 
       <section class="sec-3">
