--- a/pages/quiz3.html
+++ b/pages/quiz3.html
@@ -82,7 +82,7 @@
           <button type="submit">Submit</button>
         </form>
 
-        <p id="score-output"></p>
+        <p class="score" id="score-output"></p>
       </section>
 
       <section class="sec-3">
