added footer and styled it in quiz pages

--- a/pages/quiz3.html
+++ b/pages/quiz3.html
@@ -92,6 +92,11 @@
       </section>
     </section>
 
+    <footer>
+      <a href="quiz2.html">&lt; Back to previous page</a>
+      <a href="home.html">Go to Homepage &gt;</a>
+    </footer>
+
     <script src="../scripts/common-quiz.js"></script>
   </body>
 </html>
