--- a/pages/home.html
+++ b/pages/home.html
@@ -86,6 +86,9 @@
       </div>
     </section>
 
+    <footer>
+      <a href="../index.html">&lt; Back to Login page</a>
+    </footer>
     <script src="../scripts/home.js"></script>
   </body>
 </html>
