--- a/pages/quiz1.html
+++ b/pages/quiz1.html
@@ -102,6 +102,11 @@
       </section>
     </section>
 
+    <footer>
+      <a href="home.html">&lt; Back to previous page</a>
+      <a href="quiz2.html">Go to next page &gt;</a>
+    </footer>
+
     <script src="../scripts/common-quiz.js"></script>
   </body>
 </html>
