--- a/pages/quiz2.html
+++ b/pages/quiz2.html
@@ -103,6 +103,11 @@
       </section>
     </section>
 
+    <footer>
+      <a href="quiz1.html">&lt; Back to previous page</a>
+      <a href="quiz3.html">Go to next page &gt;</a>
+    </footer>
+
     <script src="../scripts/common-quiz.js"></script>
   </body>
 </html>
