--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Dashboard</title>
+    <link rel="stylesheet" href="../styles/dashboard.css" />
   </head>
-  <body></body>
+  <body>
+    <script src="../scripts/dashboard.js"></script>
+  </body>
 </html>
