copy the header and its styling

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="../styles/dashboard.css" />
   </head>
   <body>
+    <header>
+      <h1>QuizCrafters</h1>
+    </header>
+
     <script src="../scripts/dashboard.js"></script>
   </body>
 </html>
