--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -11,6 +11,7 @@
       <h1>QuizCrafters</h1>
     </header>
 
+    <h1 class="admin-h1">Admin Dashboard</h1>
     <script src="../scripts/dashboard.js"></script>
   </body>
 </html>
