create table form html

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -12,6 +12,18 @@
     </header>
 
     <h1 class="admin-h1">Admin Dashboard</h1>
+
+    <table class="table">
+      <thead>
+        <tr>
+          <th>User Email</th>
+          <th>HTML Score</th>
+          <th>CSS Score</th>
+          <th>JavaScript Score</th>
+        </tr>
+      </thead>
+      <tbody id="table-body">
+      </tbody>
     <script src="../scripts/dashboard.js"></script>
   </body>
 </html>
