add total score th

--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -20,6 +20,7 @@
           <th>HTML Score</th>
           <th>CSS Score</th>
           <th>JavaScript Score</th>
+          <th>Total Score</th>
         </tr>
       </thead>
       <tbody id="table-body">
