add footers to pages and adjust minor css issues

--- a/index.html
+++ b/index.html
@@ -28,6 +28,10 @@
       <input type="password" placeholder="Password" id="register-password" />
       <button type="submit">Register</button>
     </form>
+
+    <footer>
+      <a href="./pages/help.html">Need help? click here</a>
+    </footer>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
