--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
     <link rel="stylesheet" href="../styles/dashboard.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=National+Park:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -23,8 +27,12 @@
           <th>Total Score</th>
         </tr>
       </thead>
-      <tbody id="table-body">
-      </tbody>
+      <tbody id="table-body"></tbody>
+    </table>
+
+    <footer>
+      <a href="home.html">&lt; Go to Homepage</a>
+    </footer>
     <script src="../scripts/dashboard.js"></script>
   </body>
 </html>
