--- a/pages/quiz1.html
+++ b/pages/quiz1.html
@@ -103,8 +103,8 @@
     </section>
 
     <footer>
-      <a href="home.html">&lt; Back to previous page</a>
-      <a href="quiz2.html">Go to next page &gt;</a>
+      <a href="home.html">&lt; Go to Previous Page</a>
+      <a href="quiz2.html">Go to Next Page &gt;</a>
     </footer>
 
     <script src="../scripts/common-quiz.js"></script>
