--- a/pages/quiz2.html
+++ b/pages/quiz2.html
@@ -104,8 +104,8 @@
     </section>
 
     <footer>
-      <a href="quiz1.html">&lt; Back to previous page</a>
-      <a href="quiz3.html">Go to next page &gt;</a>
+      <a href="quiz1.html">&lt; Go to Previous Page</a>
+      <a href="quiz3.html">Go to Next Page &gt;</a>
     </footer>
 
     <script src="../scripts/common-quiz.js"></script>
