--- a/pages/quiz3.html
+++ b/pages/quiz3.html
@@ -93,7 +93,7 @@
     </section>
 
     <footer>
-      <a href="quiz2.html">&lt; Back to previous page</a>
+      <a href="quiz2.html">&lt; Go to Previous Page</a>
       <a href="home.html">Go to Homepage &gt;</a>
     </footer>
 
