retrieve the quizzes from the local storage

--- a/pages/quiz3.html
+++ b/pages/quiz3.html
@@ -22,65 +22,7 @@
 
     <section class="big-sec">
       <section class="sec-2">
-        <form id="quiz-form">
-          <div class="question">
-            <p>1. What is JavaScript used for in web development?</p>
-            <label
-              ><input type="radio" name="q1" value="a" /> Styling web
-              pages</label
-            ><br />
-            <label
-              ><input type="radio" name="q1" value="b" /> Structuring
-              content</label
-            ><br />
-            <label
-              ><input type="radio" name="q1" value="c" /> Making web pages
-              interactive</label
-            >
-          </div>
-
-          <div class="question">
-            <p>2. Which keyword is used to declare a variable in JavaScript?</p>
-            <label><input type="radio" name="q2" value="a" /> let</label><br />
-            <label><input type="radio" name="q2" value="b" /> define</label
-            ><br />
-            <label><input type="radio" name="q2" value="c" /> create</label>
-          </div>
-
-          <div class="question">
-            <p>3. What will <code>console.log(2 + "2")</code> output?</p>
-            <label><input type="radio" name="q3" value="a" /> 4</label><br />
-            <label><input type="radio" name="q3" value="b" /> "22"</label><br />
-            <label><input type="radio" name="q3" value="c" /> NaN</label>
-          </div>
-
-          <div class="question">
-            <p>4. What does <code>document.getElementById()</code> do?</p>
-            <label
-              ><input type="radio" name="q4" value="a" /> Creates a new
-              element</label
-            ><br />
-            <label
-              ><input type="radio" name="q4" value="b" /> Finds an element by
-              its ID</label
-            ><br />
-            <label
-              ><input type="radio" name="q4" value="c" /> Deletes an
-              element</label
-            >
-          </div>
-
-          <div class="question">
-            <p>5. Which symbol is used for comments in JavaScript?</p>
-            <label><input type="radio" name="q5" value="a" /> #</label><br />
-            <label><input type="radio" name="q5" value="b" /> //</label><br />
-            <label
-              ><input type="radio" name="q5" value="c" /> &lt;!-- --&gt;</label
-            >
-          </div>
-
-          <button type="submit">Submit</button>
-        </form>
+        <form id="quiz-form"></form>
 
         <p class="score" id="score-output"></p>
       </section>
