--- a/pages/quiz1.html
+++ b/pages/quiz1.html
@@ -22,75 +22,7 @@
 
     <section class="big-sec">
       <section class="sec-2">
-        <form id="quiz-form">
-          <div class="question">
-            <p>1. What does HTML stand for?</p>
-            <label
-              ><input type="radio" name="q1" value="a" /> Hyper Text Markup
-              Language</label
-            ><br />
-            <label
-              ><input type="radio" name="q1" value="b" /> Home Tool Markup
-              Language</label
-            ><br />
-            <label
-              ><input type="radio" name="q1" value="c" /> Hyperlinks and Text
-              Markup Language</label
-            >
-          </div>
-          <div class="question">
-            <p>2. Which tag is used to create a numbered list in HTML?</p>
-            <label><input type="radio" name="q2" value="a" /> &lt;ul&gt;</label
-            ><br />
-            <label><input type="radio" name="q2" value="b" /> &lt;ol&gt;</label
-            ><br />
-            <label><input type="radio" name="q2" value="c" /> &lt;li&gt;</label>
-          </div>
-
-          <div class="question">
-            <p>3. What does the &lt;a&gt; tag in HTML define?</p>
-            <label
-              ><input type="radio" name="q3" value="a" /> An anchor (link to
-              another page or section)</label
-            ><br />
-            <label
-              ><input type="radio" name="q3" value="b" /> A bold text
-              element</label
-            ><br />
-            <label
-              ><input type="radio" name="q3" value="c" /> An image
-              placeholder</label
-            >
-          </div>
-
-          <div class="question">
-            <p>4. Which HTML tag is used to define a table row?</p>
-            <label><input type="radio" name="q4" value="a" /> &lt;td&gt;</label
-            ><br />
-            <label><input type="radio" name="q4" value="b" /> &lt;th&gt;</label
-            ><br />
-            <label><input type="radio" name="q4" value="c" /> &lt;tr&gt;</label
-            ><br />
-          </div>
-
-          <div class="question">
-            <p>What is a semantic HTML element?</p>
-            <label>
-              <input type="radio" name="q5" value="a" />
-              An element that describes its content meaningfully </label
-            ><br />
-            <label>
-              <input type="radio" name="q5" value="b" />
-              An element that only provides layout styling </label
-            ><br />
-            <label>
-              <input type="radio" name="q5" value="c" />
-              An element that has no content and is just used for layout </label
-            ><br />
-          </div>
-
-          <button type="submit">Submit</button>
-        </form>
+        <form id="quiz-form"></form>
 
         <p class="score" id="score-output"></p>
       </section>
